# My-AI-Scorecard

./: CHANGELOG.md  README.md  RELEASE_NOTES_v2.0.0a1.md  RELEASE_NOTES_v2.0.0a2.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  tag-release.yml
ai_use_case_context/: __init__.py  __main__.py  compliance.py  core.py  dashboard.py  escalation.py  governance_hooks.py  provenance.py  security.py  serialization.py  vendor_scorecard.py  web.py
docs/: framework-mindmap.md  governance-provenance-vendor-guide.md
examples/: basic_usage.py  escalation_demo.py  governance_review.py  portfolio_dashboard.py  security_governance.py  serialization_demo.py  vendor_engagement_review.py
scripts/: release.sh
tests/: test_compliance.py  test_core.py  test_custom_dimensions.py  test_dashboard.py  test_escalation.py  test_governance_hooks.py  test_provenance.py  test_security.py  test_serialization.py  test_vendor_scorecard.py  test_web.py  test_web_security.py
