[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-use-case-context"
version = "1.1.0"
description = "A generalizable governance framework for AI-driven media production use cases"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
keywords = ["ai", "governance", "media", "production", "risk", "compliance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
web = ["flask>=3.0"]
dev = ["pytest>=7.0", "flask>=3.0"]

[tool.setuptools.packages.find]
include = ["ai_use_case_context*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
